# FaceRecognitionDotNet

./: .gitignore  .gitlab-ci.yml  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ExecuteTest.bat  ExecuteTest.ps1  ExecuteTestNuget.bat  FaceRecognitionDotNet.json  FaceRecognitionDotNet.sln  Initialize.sh  Jenkinsfile  LICENSE.txt  README.md  UpdateSubmodules.bat  index.html  manifest.json  toc.html  xrefmap.yml
.github/workflows/: docfx.xml  docfx.yml
api/: FaceRecognitionDotNet.DisposableObject.html  FaceRecognitionDotNet.Extensions.AgeEstimator.html  FaceRecognitionDotNet.Extensions.AgeRange.html  FaceRecognitionDotNet.Extensions.EmotionEstimator.html  FaceRecognitionDotNet.Extensions.EyeAspectRatioBaseEyeBlinkDetector.html  FaceRecognitionDotNet.Extensions.EyeAspectRatioHelenEyeBlinkDetector.html  FaceRecognitionDotNet.Extensions.EyeAspectRatioLargeEyeBlinkDetector.html  FaceRecognitionDotNet.Extensions.EyeBlinkDetector.html  FaceRecognitionDotNet.Extensions.FaceDetector.html  FaceRecognitionDotNet.Extensions.FaceLandmarkDetector.html  FaceRecognitionDotNet.Extensions.GenderEstimator.html  FaceRecognitionDotNet.Extensions.HeadPoseEstimator.html  FaceRecognitionDotNet.Extensions.HelenFaceLandmarkDetector.html  FaceRecognitionDotNet.Extensions.SimpleAgeEstimator.html  FaceRecognitionDotNet.Extensions.SimpleEmotionEstimator.html  FaceRecognitionDotNet.Extensions.SimpleFaceDetector.html  FaceRecognitionDotNet.Extensions.SimpleGenderEstimator.html  FaceRecognitionDotNet.Extensions.SimpleHeadPoseEstimator.html  FaceRecognitionDotNet.Extensions.html  FaceRecognitionDotNet.FaceEncoding.html  FaceRecognitionDotNet.FacePart.html  FaceRecognitionDotNet.FacePoint.html  FaceRecognitionDotNet.FaceRecognition.html  FaceRecognitionDotNet.Gender.html  FaceRecognitionDotNet.HeadPose.html  FaceRecognitionDotNet.Image.html  FaceRecognitionDotNet.ImageFormat.html  FaceRecognitionDotNet.Location.html  FaceRecognitionDotNet.Mode.html  FaceRecognitionDotNet.Model.html  FaceRecognitionDotNet.ModelParameter.html  FaceRecognitionDotNet.Point.html  FaceRecognitionDotNet.PredictorModel.html  FaceRecognitionDotNet.html  index.html  toc.html
articles/: intro.html
docfx/: GenerateFaceRecognitionDotNetDocmenet.ps1  RunDocumentServer.ps1  index.md  toc.yml
docs/: GenerateFaceRecognitionDotNetDocmenet.ps1  RunDocumentServer.ps1  docfx.json
docs/docfx/: docfx.exe.config
examples/AgeTraining/: AgeTraining.csproj  README.md
examples/Benchmark/: Program.cs  README.md
examples/BenchmarkEndToEnd/: Program.cs
examples/BlinkDetection/: .gitignore  BlinkDetection.csproj  Program.cs  README.md
examples/CustomClassificationDemo/: .gitignore  CustomClassificationDemo.csproj  Program.cs  README.md
examples/DotNet6/: .gitignore  DotNet6.csproj  Program.cs  README.md
examples/Encoding/: Encoding.csproj  Program.cs  README.md  Test.ps1
examples/FaceDetection/: Program.cs  README.md
examples/FaceEncodingPerformance/: FaceEncodingPerformance.csproj  Program.cs  README.md
examples/FaceSearch/: Program.cs  README.md
examples/FindFacesInBatches/: FindFacesInBatches.csproj  Program.cs  README.md  Run.ps1
examples/GenderTraining/: GenderTraining.csproj  Program.cs  README.md
examples/HeadPoseEstimationDemo/: .gitignore  Program.cs  README.md
examples/HelenTraining/: .gitignore  HelenTraining.csproj  Part.cs  Program.cs  README.md
examples/OpenCVSharpSample/: OpenCVSharpSample.csproj  Program.cs  README.md
examples/RgbBgr/: Program.cs  README.md  RgbBgr.csproj
examples/SkiaSharpSample/: Program.cs  README.md  SkiaSharpSample.csproj
licenses/: DlibDotNet
nuget/: BuildAndroid.ps1  BuildCentOS7.ps1  BuildIOS.ps1  BuildNuspec.ARM.bat  BuildNuspec.CPU.bat  BuildNuspec.CUDA.bat  BuildNuspec.MKL.bat  BuildNuspec.Pre.bat  BuildNuspec.bat  BuildOSX.ps1  BuildUbuntu16.ps1  BuildUniversalWindowsPlatform.ps1  BuildUtils.ps1  BuildWindows.ps1  CreateAllPackage.bat  CreateAllPackage.ps1  CreatePackage.ps1  ExtractNupkgToArtifacts.ps1  FaceRecognitionDotNet-ARM.nuspec  FaceRecognitionDotNet-CPU.nuspec  FaceRecognitionDotNet-CUDA.nuspec  FaceRecognitionDotNet.ARM.nuspec  FaceRecognitionDotNet.CPU.nuspec  FaceRecognitionDotNet.CUDA-100.nuspec  FaceRecognitionDotNet.CUDA-92.nuspec  FaceRecognitionDotNet.CUDA100.nuspec  FaceRecognitionDotNet.CUDA101.nuspec  FaceRecognitionDotNet.CUDA92.nuspec  FaceRecognitionDotNet.MKL.nuspec  Makefile  Publish.bat  Publish.ps1  RunTestContainer.ps1  TestPackage.ps1  TestPackageCentOS7.ps1  TestPackageOSX.ps1  TestPackageOSX.sh  TestPackageRaspberryPi.sh  TestPackageUbuntu16.ps1  TestPackageWindows.ps1  (+1 more)
nuget/nuspec/: FaceRecognitionDotNet.ARM.nuspec  FaceRecognitionDotNet.CPU.nuspec  FaceRecognitionDotNet.CUDA100.nuspec  FaceRecognitionDotNet.CUDA101.nuspec  FaceRecognitionDotNet.CUDA102.nuspec  FaceRecognitionDotNet.CUDA110.nuspec  FaceRecognitionDotNet.CUDA111.nuspec  FaceRecognitionDotNet.CUDA112.nuspec  FaceRecognitionDotNet.CUDA92.nuspec  FaceRecognitionDotNet.MKL.nuspec
src/AgeClassification/: Build.ps1  CMakeLists.txt  version-cuda.rc.in  version.rc.in
src/AgeClassification/dlib/: config.h.in
src/AgeClassification/dlib/dnn/loss/multiclass_log/age/: Age.h  defines.h
src/AgeClassification/dlib/dnn/loss/multiclass_log/gender/: Age.cpp
src/DlibDotNet.Native.Dnn.AgeClassification/: Build.ps1  CMakeLists.txt  version-cuda.rc.in  version.rc.in
src/DlibDotNet.Native.Dnn.GenderClassification/: CMakeLists.txt  version-cuda.rc.in  version.rc.in
src/EmotionClassification/: CMakeLists.txt  version-cuda.rc.in  version.rc.in
src/FaceRecognitionDotNet/: AssemblyInfo.cs  DisposableObject.cs  FaceEncoding.cs  FacePart.cs  FacePoint.cs  FaceRecognition.cs  FaceRecognitionDotNet.csproj  FaceRecognitionModels.cs  Gender.cs  HeadPose.cs  Image.cs  ImageFormat.cs  Location.cs  Mode.cs  Model.cs  ModelParameter.cs  Models.cs  (+3 more)
src/FaceRecognitionDotNet.Extensions.Skia/: FaceRecognition.cs  FaceRecognitionDotNet.Extensions.Skia.csproj
src/Searches/AnnoySearch/: Build.ps1  CMakeLists.txt  version.rc.in
src/Searches/AnnoySearch/src/: config.h.in  search.cpp  search.h
(+120 files in other folders)
